    - Sort items alphabetically in OpenSesame script (#236)
    - Improved validation of conditional statements (#235)
    - Correctly parse non-Unix line separators in text_display plug-in (#237)
    - Saner focus and event-handling in script view.
    - Flush keyboard during sound playback to catch 'Escape' presses (#227)
    - Initial jitter_mode value in advanced_delay plug-in (#238)

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Mon, 24 Feb 2014 16:23:27 +0100

opensesame (2.8.0-ubuntu4) saucy; urgency=low

  * Fix missing help files

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Tue, 18 Feb 2014 10:15:47 +0100

opensesame (2.8.0-ubuntu3) saucy; urgency=low

  * New functionality and improvements
    - Add runner functionality
    - Improved exception handling
    - Migrate to QProgEdit editor component
    - Updated offline help pages
    - Improve support for non-Latin alphabets (#211)
    - Add correct-response option to touch_response plug-in (#214)
    - Add style argument to canvas.fixdot()
    - Add item.set_response() convenience method
    - Add gamma and suppress-warnings options to psycho back-end
  * Bugs fixed
    - Line wrapping causes double spaces (#203)
    - Keywords to `decode()` break compatibility with Python < 2.7 (#201)
    - Respect `focus=no` in `form_base` (#208)
    - Fix ugly exception on Escape press in joystick plug-in (#162)
    - Correctly parse non-Unix line separators in HTML parser
    - Do not give ugly warning on close (#124)
    - Set subject_parity in Android runtime (#221)
  * Debian packaging
    - Remove large template files

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Fri, 13 Sep 2013 16:59:10 +0200

opensesame (0.27.4-ubuntu2) raring; urgency=low

  * Various bug-fixes
  * Add Chinese translation (zh_CN)
  * Make HTML parsing optional in sketchpad items
  * Add `orientation` keyword to rating_scale form widget

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Wed, 21 Aug 2013 13:08:16 +0200
