@@ -10,6 +10,7 @@ opensesame (2.8.1~pre1-ubuntu1) saucy; urgency=low
     - Saner focus and event-handling in script view.
     - Flush keyboard during sound playback to catch 'Escape' presses (#227)
     - Initial jitter_mode value in advanced_delay plug-in (#238)
+    - Fix crash on special characters in experiment title with legacy back-end
 
  -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Mon, 24 Feb 2014 16:23:27 +0100
 
